initial commit for website

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -14,5 +14,5 @@ $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $black: #000 !default;
 
-$primary: #ee0979 !default;
-$secondary: #ff6a00 !default;
+$primary: #9f80ce !default;
+$secondary: #32b4f2 !default;
