--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -11,6 +11,7 @@ header.masthead {
   .masthead-content {
     z-index: 1;
     position: relative;
+    text-align: center;
     .masthead-heading {
       font-size: 4rem;
     }
@@ -47,6 +48,9 @@ header.masthead {
     width: 30rem;
     top: -5rem;
     right: 35%;
+  }
+  .thor-reward {
+    margin-top: 25px;
   }
 }
 
