adjustable thor price, condensed result table

--- a/scss/vechain-to-thor.scss
+++ b/scss/vechain-to-thor.scss
@@ -7,3 +7,11 @@
 @import "navbar.scss";
 @import "masthead.scss";
 @import "bootstrap-overrides.scss";
+
+
+.thor-reward {
+    margin-top: 25px;
+}
+#priceAndNodeForm {
+    margin-top: 25px;
+}
