--- a/scss/vechain-to-thor.scss
+++ b/scss/vechain-to-thor.scss
@@ -8,7 +8,7 @@
 @import "masthead.scss";
 @import "bootstrap-overrides.scss";
 
-header.masthead{
+header > .masthead {
     padding-top: 7rem;
 }
 
